<resources>
    <string name="app_name">Marmu POS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgotten password ?</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm password</string>
    <string name="business_name">Business name</string>
    <string name="_continue">Continue</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sales">Sales</string>
    <string name="receipts">Receipts</string>
    <string name="items">Items</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="share">Share</string>
    <string name="charge_0_00">Charge 0.00</string>
    <string name="_0">0</string>
    <string name="fav_no_msg">Add to Favorites the most popular items.  For this go to the items list and click on the star icon opposite the item</string>
    <string name="ok">OK</string>
    <string name="no_items">No Items</string>
    <string name="item">Item</string>
    <string name="category">Category</string>
    <string name="category_name">Category name</string>
    <string name="create_new_item">+ Create new item</string>
    <string name="category_color">Category Color</string>
    <string name="save">Save</string>
    <string name="this_color_will_automatically_apply_to_all_the_items_under_the_categories_for_which_no_custom_color_is_set">This color will automatically apply to all the items under the categories for which no custom color is set</string>
    <string name="search">Search</string>
    <string name="price_desc">Leave the field blank to indicate the price upon sale</string>
</resources>
