<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_menu_sales"
            android:title="@string/sales" />
        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/ic_menu_receipts"
            android:title="@string/receipts" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_menu_items"
            android:title="@string/items" />
        <item
            android:id="@+id/nav_feedbacks"
            android:icon="@drawable/ic_menu_feedbacks"
            android:title="@string/feedbacks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_menu_support"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>
</menu>
