<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/common_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8dp">

    <LinearLayout
        android:id="@+id/no_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_items"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:gravity="center"
            android:text="@string/fav_no_msg"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/box_white"
            android:text="@string/ok" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
</RelativeLayout>
