<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_white"
        android:padding="@dimen/_16dp">

        <ImageView
            android:id="@+id/iv_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu_items" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_toEndOf="@+id/iv_item"
            android:padding="@dimen/_4dp"
            android:text="@string/item"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_white"
        android:padding="@dimen/_16dp">

        <ImageView
            android:id="@+id/iv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_category" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4dp"
            android:layout_toEndOf="@+id/iv_category"
            android:padding="@dimen/_4dp"
            android:text="@string/category"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
    </RelativeLayout>

</LinearLayout>